# JoinAI-Agent

./: CCLA.md  CONTRIBUTING.md  ICLA.md  LICENSE  NOTICE  README.md  README_CN.md  README_EN.md  docker-compose.yml
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  api.py  constraints.txt  langgraph.json  manifests.yaml  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_backend.py  test_demo.py  test_docker.py
backend/a2a_agent/pic-agent/: .env.example  Dockerfile  README.md  main.py  requirements.txt
backend/a2a_agent/pic-agent/app/: __init__.py  agent.py  multimodal.py
backend/a2a_agent/pic-agent/utils/: __init__.py  (+2 more)
backend/config/: a2a_server.json  mcp_server.json
backend/example/: example_search.py
backend/langgraph_agent/: config.py  constant.py
backend/langgraph_agent/exceptions/: __init__.py  expert_exceptions.py
backend/langgraph_agent/graph/: a2a_agent.py  graph.py  llm.py  mcp_client.py  mcp_tool.py  nodes.py  reporter_node.py  route.py  state.py  supervisor_agent.py  utils.py
backend/langgraph_agent/prompts/: __init__.py  loader.py
backend/langgraph_agent/scripts/: test_a2a_from_state.py  test_a2a_three_agents.py
backend/langgraph_agent/tools/: __init__.py  base_tool.py  html_tool.py  message_tool.py  pytest.ini  web_search_tool.py
backend/langgraph_agent/utils/: auth_utils.py  convert_md.py  files_utils.py  json_utils.py  message_utils.py  tool_utils.py
backend/mcp_server/: baidu_http_server.py  duckduckgo_http_server.py  jina_http_server.py  run_all.py  serpapi_http_server.py  serper_http_server.py
(+218 files in other folders)
