[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joinai_agent"
version = "0.0.1"
description = "LangGraph agent for JoinAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain",
    "fastapi"
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["langgraph_agent*"]  